add and setup Firebase

--- a/6_Donut-Chart-project/package.json
+++ b/6_Donut-Chart-project/package.json
@@ -10,6 +10,7 @@
   "author": "Nate Stephens <ndstephens@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "d3": "^5.9.2"
+    "d3": "^5.9.2",
+    "firebase": "^6.0.2"
   }
 }
