--- a/9_Tree-Diagram-project/package.json
+++ b/9_Tree-Diagram-project/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "d3": "^5.9.2",
-    "firebase": "^6.0.4"
+    "firebase": "^6.0.4",
+    "materialize-css": "^1.0.0-rc.2"
   }
 }
