--- a/6_Donut-Chart-project/package.json
+++ b/6_Donut-Chart-project/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel index.html"
+    "dev": "parcel index.html",
+    "build": "parcel build index.html --no-source-maps -d build"
   },
   "keywords": [],
   "author": "Nate Stephens <ndstephens@gmail.com>",
@@ -14,5 +15,8 @@
     "d3-svg-legend": "^2.25.6",
     "d3-tip": "^0.9.1",
     "firebase": "^6.0.2"
+  },
+  "devDependencies": {
+    "cssnano": "^4.1.10"
   }
 }
