--- a/7_Line-Graph-project/package.json
+++ b/7_Line-Graph-project/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel index.html"
+    "dev": "parcel index.html",
+    "build": "parcel build index.html --no-source-maps -d build"
   },
   "keywords": [],
   "author": "Nate Stephens <ndstephens@gmail.com>",
@@ -12,5 +13,8 @@
   "dependencies": {
     "d3": "^5.9.2",
     "firebase": "^6.0.4"
+  },
+  "devDependencies": {
+    "cssnano": "^4.1.10"
   }
 }
