--- a/9_Tree-Diagram-project/package.json
+++ b/9_Tree-Diagram-project/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel index.html"
+    "dev": "parcel index.html",
+    "build": "parcel build index.html --no-source-maps -d build"
   },
   "keywords": [],
   "author": "Nate Stephens <ndstephens@gmail.com>",
@@ -13,5 +14,8 @@
     "d3": "^5.9.2",
     "firebase": "^6.0.4",
     "materialize-css": "^1.0.0-rc.2"
+  },
+  "devDependencies": {
+    "cssnano": "^4.1.10"
   }
 }
